--- a/MainController/MainWindow.xaml
+++ b/MainController/MainWindow.xaml
@@ -1,17 +1,82 @@
 ﻿<Window x:Class="MainController.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="MainWindow" Height="600" Loaded="Window_Loaded" Width="800">
+        Title="MainWindow" Height="768" Loaded="Window_Loaded" Width="1024">
     <Window.Resources>
         <XmlDataProvider x:Key="ComPorts" Source="CommsData.xml" XPath="/Comms/Ports" />
         <XmlDataProvider x:Key="ComSpeed" Source="CommsData.xml" XPath="/Comms/Baud" />
     </Window.Resources>
     <Grid>
-        <TextBlock x:Name="ConsoleBlock" HorizontalAlignment="Left" Margin="71,10,0,0" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top" Height="58" Width="436"/>
-        <Button Content="Button" HorizontalAlignment="Left" Margin="417,264,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click"/>
-        <ComboBox x:Name="comm_ports" HorizontalAlignment="Left" Margin="10,107,0,0" VerticalAlignment="Top" Width="120" ItemsSource="{Binding Source={StaticResource ComPorts}}"/>
-        <ComboBox x:Name="comm_speed" HorizontalAlignment="Left" Margin="10,134,0,0" VerticalAlignment="Top" Width="120" ItemsSource="{Binding Source={StaticResource ComSpeed}}" />
-        <Ellipse x:Name="statusIndicator" Fill="Red" HorizontalAlignment="Left" Height="34" Margin="54,252,0,0" VerticalAlignment="Top" Width="34"/>
+        <Grid.RowDefinitions>
+            <RowDefinition/>
+            <RowDefinition Height="0*"/>
+        </Grid.RowDefinitions>
+        <Button x:Name="TestButton" Content="Test All" HorizontalAlignment="Left" Margin="763,539,0,0" VerticalAlignment="Top" Width="76" Click="TestButton_Click" Height="22"/>
+        <ComboBox x:Name="comm_ports" IsEditable="True" IsReadOnly="True" Text="Ports" HorizontalAlignment="Left" Margin="151,402,0,0" VerticalAlignment="Top" Width="58" ItemsSource="{Binding Source={StaticResource ComPorts}}" Height="22"/>
+        <ComboBox x:Name="comm_speed" IsEditable="True" IsReadOnly="True" Text="Baud Rate" HorizontalAlignment="Left" Margin="214,402,0,0" VerticalAlignment="Top" Width="84" ItemsSource="{Binding Source={StaticResource ComSpeed}}" Height="22" />
+        <Ellipse x:Name="statusIndicator" Fill="Red" HorizontalAlignment="Left" Height="26" Margin="631,306,0,0" VerticalAlignment="Top" Width="26"/>
+        <Label Content="Kinect Front" HorizontalAlignment="Left" Margin="53,68,0,0" VerticalAlignment="Top" Width="92" Height="26">
+            <Label.Background>
+                <SolidColorBrush Color="{DynamicResource {x:Static SystemColors.MenuHighlightColorKey}}"/>
+            </Label.Background>
+        </Label>
+        <Label Content="Kinect Back" HorizontalAlignment="Left" Margin="53,98,0,0" VerticalAlignment="Top" Width="92" Height="26">
+            <Label.Background>
+                <SolidColorBrush Color="{DynamicResource {x:Static SystemColors.MenuHighlightColorKey}}"/>
+            </Label.Background>
+        </Label>
+        <Label Content="Limbo Viewer" HorizontalAlignment="Left" Margin="53,130,0,0" VerticalAlignment="Top" Width="92" Height="26">
+            <Label.Background>
+                <SolidColorBrush Color="{DynamicResource {x:Static SystemColors.MenuHighlightColorKey}}"/>
+            </Label.Background>
+        </Label>
+        <Label Content="Image Server" HorizontalAlignment="Left" Margin="53,160,0,0" VerticalAlignment="Top" Width="92" Height="26">
+            <Label.Background>
+                <SolidColorBrush Color="{DynamicResource {x:Static SystemColors.MenuHighlightColorKey}}"/>
+            </Label.Background>
+        </Label>
+        <Label Content="Limbo Stand" HorizontalAlignment="Left" Margin="53,192,0,0" VerticalAlignment="Top" Width="92" Height="26">
+            <Label.Background>
+                <SolidColorBrush Color="{DynamicResource {x:Static SystemColors.MenuHighlightColorKey}}"/>
+            </Label.Background>
+        </Label>
+        <Label Content="iPad" HorizontalAlignment="Left" Margin="53,222,0,0" VerticalAlignment="Top" Width="92" Height="26">
+            <Label.Background>
+                <SolidColorBrush Color="{DynamicResource {x:Static SystemColors.MenuHighlightColorKey}}"/>
+            </Label.Background>
+        </Label>
+        <TextBox x:Name="kinectFrontIPInput" HorizontalAlignment="Left" Height="23" Margin="160,71,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="120"/>
+        <TextBox x:Name="kinectBackIPInput" HorizontalAlignment="Left" Height="23" Margin="160,101,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="120"/>
+        <TextBox x:Name="limboViewerIPInput" HorizontalAlignment="Left" Height="23" Margin="160,133,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="120"/>
+        <TextBox x:Name="imageServerIPInput" HorizontalAlignment="Left" Height="23" Margin="160,163,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="120"/>
+        <TextBox x:Name="limboStandIPInput" HorizontalAlignment="Left" Height="23" Margin="160,195,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="120"/>
+        <TextBox x:Name="ipadIPInput" HorizontalAlignment="Left" Height="23" Margin="160,225,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="120"/>
+        <Label Content="Remote" HorizontalAlignment="Left" Margin="54,400,0,0" VerticalAlignment="Top" Width="92" Height="26">
+            <Label.Background>
+                <SolidColorBrush Color="{DynamicResource {x:Static SystemColors.MenuHighlightColorKey}}"/>
+            </Label.Background>
+        </Label>
+        <Label Content="Set IP Addresses" HorizontalAlignment="Left" Margin="54,35,0,0" VerticalAlignment="Top" Width="310" Height="26">
+            <Label.Background>
+                <SolidColorBrush Color="{DynamicResource {x:Static SystemColors.ActiveCaptionColorKey}}"/>
+            </Label.Background>
+        </Label>
+        <Label Content="Set RS-232 COMM Port" HorizontalAlignment="Left" Margin="54,369,0,0" VerticalAlignment="Top" Width="310" Height="26">
+            <Label.Background>
+                <SolidColorBrush Color="{DynamicResource {x:Static SystemColors.ActiveCaptionColorKey}}"/>
+            </Label.Background>
+        </Label>
+        <Button x:Name="IPSetButton" Content="Apply" HorizontalAlignment="Left" Margin="288,290,0,0" VerticalAlignment="Top" Width="76" Click="IPSetButton_Click" Height="22"/>
+        <TextBox x:Name="portInput" HorizontalAlignment="Left" Height="23" Margin="159,255,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="120"/>
+        <Label Content="OSC Port" HorizontalAlignment="Left" Margin="82,252,0,0" VerticalAlignment="Top" Width="64" Height="26"/>
+        <Button x:Name="comms_connect" Content="Connect" HorizontalAlignment="Left" Margin="289,449,0,0" VerticalAlignment="Top" Width="75" Click="comms_connect_Click"/>
+        <RichTextBox x:Name="commData" HorizontalAlignment="Left" Height="147" Margin="54,514,0,0" VerticalAlignment="Top" Width="310" VerticalScrollBarVisibility="Auto">
+            <FlowDocument>
+                <Paragraph>
+                    <Run Text="RichTextBox"/>
+                </Paragraph>
+            </FlowDocument>
+        </RichTextBox>
 
     </Grid>
 </Window>
