--- a/MainController/MainWindow.xaml
+++ b/MainController/MainWindow.xaml
@@ -6,7 +6,7 @@
         <XmlDataProvider x:Key="ComPorts" Source="CommsData.xml" XPath="/Comms/Ports" />
         <XmlDataProvider x:Key="ComSpeed" Source="CommsData.xml" XPath="/Comms/Baud" />
     </Window.Resources>
-    <Grid Margin="4,0,-4,0">
+    <Grid x:Name="ipadTestMsgButton" Margin="4,0,-4,0">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="495*"/>
             <ColumnDefinition Width="521*"/>
@@ -15,10 +15,14 @@
             <RowDefinition/>
             <RowDefinition Height="0*"/>
         </Grid.RowDefinitions>
-        <Button x:Name="TestButton" Content="Test All" HorizontalAlignment="Left" Margin="408,622,0,0" VerticalAlignment="Top" Width="76" Click="TestButton_Click" Height="22" Grid.Column="1"/>
+        <Button x:Name="TestAllButton" Content="Test All" HorizontalAlignment="Left" Margin="392,631,0,0" VerticalAlignment="Top" Width="76" Click="TestAllButton_Click" Height="22" Grid.Column="1"/>
         <ComboBox x:Name="comm_ports" IsEditable="True" IsReadOnly="True" Text="Ports" HorizontalAlignment="Left" Margin="125,402,0,0" VerticalAlignment="Top" Width="58" ItemsSource="{Binding Source={StaticResource ComPorts}}" Height="22"/>
         <ComboBox x:Name="comm_speed" IsEditable="True" IsReadOnly="True" Text="Baud Rate" HorizontalAlignment="Left" Margin="188,402,0,0" VerticalAlignment="Top" Width="84" ItemsSource="{Binding Source={StaticResource ComSpeed}}" Height="22" />
-        <Ellipse x:Name="statusIndicator" Fill="Red" HorizontalAlignment="Left" Height="26" Margin="327,622,0,0" VerticalAlignment="Top" Width="26" Grid.Column="1"/>
+        <Ellipse x:Name="iPadLED" HorizontalAlignment="Left" Height="26" Margin="59,627,0,0" VerticalAlignment="Top" Width="26" Grid.Column="1">
+            <Ellipse.Fill>
+                <SolidColorBrush Color="{DynamicResource {x:Static SystemColors.ScrollBarColorKey}}"/>
+            </Ellipse.Fill>
+        </Ellipse>
         <Label Content="Kinect Front" HorizontalAlignment="Left" Margin="27,68,0,0" VerticalAlignment="Top" Width="92" Height="26">
             <Label.Background>
                 <SolidColorBrush Color="{DynamicResource {x:Static SystemColors.MenuHighlightColorKey}}"/>
@@ -90,12 +94,12 @@
         <Button x:Name="pictureButton" Content="Picture" HorizontalAlignment="Left" Margin="313,81,0,0" VerticalAlignment="Top" Width="75" Grid.Column="1" Click="pictureButton_Click"/>
         <Button x:Name="successButton" Content="Success" HorizontalAlignment="Left" Margin="269,108,0,0" VerticalAlignment="Top" Width="75" Grid.Column="1" Click="successButton_Click"/>
         <Button x:Name="failButton" Content="Fail" HorizontalAlignment="Left" Margin="359,108,0,0" VerticalAlignment="Top" Width="75" Grid.Column="1" Click="failButton_Click"/>
-        <RadioButton GroupName="LimboSet" Content="3.0" HorizontalAlignment="Left" Margin="440,128,0,0" VerticalAlignment="Top" />
-        <RadioButton GroupName="LimboSet" Content="4.0" HorizontalAlignment="Left" Margin="440,108,0,0" VerticalAlignment="Top"/>
-        <RadioButton GroupName="LimboSet" Content="5.0" HorizontalAlignment="Left" Margin="440,87,0,0" VerticalAlignment="Top" IsChecked="True"/>
+        <RadioButton x:Name="radioButton3" GroupName="LimboSet" Content="3.0" HorizontalAlignment="Left" Margin="440,128,0,0" VerticalAlignment="Top" />
+        <RadioButton x:Name="radioButton4" GroupName="LimboSet" Content="4.0" HorizontalAlignment="Left" Margin="440,108,0,0" VerticalAlignment="Top"/>
+        <RadioButton x:Name="radioButton5" GroupName="LimboSet" Content="5.0" HorizontalAlignment="Left" Margin="440,87,0,0" VerticalAlignment="Top" IsChecked="True"/>
         <TextBlock x:Name="myIPAddrText" Grid.Column="1" HorizontalAlignment="Left" Margin="221,695,0,0" TextWrapping="Wrap" Text="IP Address" VerticalAlignment="Top" Width="98"/>
         <Label Content="My IP Addr" Grid.Column="1" HorizontalAlignment="Left" Margin="140,690,0,0" VerticalAlignment="Top" Width="81"/>
-        <Button x:Name="iPadTestButton" Content="iPad Test" Grid.Column="1" HorizontalAlignment="Left" Margin="327,356,0,0" VerticalAlignment="Top" Width="75" Click="iPadTestButton_Click"/>
+        <Button x:Name="iPadMsgButton" Content="iPad int Msg" Grid.Column="1" HorizontalAlignment="Left" Margin="327,356,0,0" VerticalAlignment="Top" Width="75" Click="iPadMsgButton_Click"/>
         <TextBox x:Name="iPadMsgAddrInput" Grid.Column="1" HorizontalAlignment="Left" Height="23" Margin="110,356,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="81" TextChanged="iPadMsgAddrInput_TextChanged"/>
         <TextBox x:Name="iPadMsgArgInput" Grid.Column="1" HorizontalAlignment="Left" Height="23" Margin="211,355,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="81" TextChanged="iPadMsgArgInput_TextChanged"/>
         <Label Content="string" Grid.Column="1" HorizontalAlignment="Left" Margin="151,379,0,0" VerticalAlignment="Top"/>
@@ -103,6 +107,45 @@
         <TextBlock x:Name="userCountDisplay" Grid.Column="1" HorizontalAlignment="Left" Margin="275,151,0,0" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top" Width="96"/>
         <Label Content="User Count" Grid.Column="1" HorizontalAlignment="Left" Margin="187,146,0,0" VerticalAlignment="Top"/>
         <Button x:Name="resetUserCountButton" Content="reset" Grid.Column="1" HorizontalAlignment="Left" Margin="392,150,0,0" VerticalAlignment="Top" Width="75" Click="resetUserCountButton_Click"/>
+        <Button x:Name="ipadReadyButton" Content="/ipad &quot;ready&quot;" Grid.Column="1" HorizontalAlignment="Left" Margin="327,428,0,0" VerticalAlignment="Top" Width="75" Click="ipadReadyButton_Click"/>
+        <Label Content="iPad" Grid.Column="1" HorizontalAlignment="Left" Margin="54,596,0,0" VerticalAlignment="Top"/>
+        <Ellipse x:Name="limboViewerLED" HorizontalAlignment="Left" Height="26" Margin="110,627,0,0" VerticalAlignment="Top" Width="26" Grid.Column="1">
+            <Ellipse.Fill>
+                <SolidColorBrush Color="{DynamicResource {x:Static SystemColors.ScrollBarColorKey}}"/>
+            </Ellipse.Fill>
+        </Ellipse>
+        <Ellipse x:Name="limboStandLED" HorizontalAlignment="Left" Height="26" Margin="165,627,0,0" VerticalAlignment="Top" Width="26" Grid.Column="1">
+            <Ellipse.Fill>
+                <SolidColorBrush Color="{DynamicResource {x:Static SystemColors.ScrollBarColorKey}}"/>
+            </Ellipse.Fill>
+        </Ellipse>
+        <Ellipse x:Name="imageServerLED" HorizontalAlignment="Left" Height="26" Margin="221,627,0,0" VerticalAlignment="Top" Width="26" Grid.Column="1">
+            <Ellipse.Fill>
+                <SolidColorBrush Color="{DynamicResource {x:Static SystemColors.ScrollBarColorKey}}"/>
+            </Ellipse.Fill>
+        </Ellipse>
+        <Ellipse x:Name="kinectFrontLED" HorizontalAlignment="Left" Height="26" Margin="275,627,0,0" VerticalAlignment="Top" Width="26" Grid.Column="1">
+            <Ellipse.Fill>
+                <SolidColorBrush Color="{DynamicResource {x:Static SystemColors.ScrollBarColorKey}}"/>
+            </Ellipse.Fill>
+        </Ellipse>
+        <Ellipse x:Name="kinectBackLED" HorizontalAlignment="Left" Height="26" Margin="327,627,0,0" VerticalAlignment="Top" Width="26" Grid.Column="1">
+            <Ellipse.Fill>
+                <SolidColorBrush Color="{DynamicResource {x:Static SystemColors.ScrollBarColorKey}}"/>
+            </Ellipse.Fill>
+        </Ellipse>
+        <Label Content="Viewer" Grid.Column="1" HorizontalAlignment="Left" Margin="103,596,0,0" VerticalAlignment="Top"/>
+        <Label Content="Stand" Grid.Column="1" HorizontalAlignment="Left" Margin="154,596,0,0" VerticalAlignment="Top"/>
+        <Label Content="Image" Grid.Column="1" HorizontalAlignment="Left" Margin="211,596,0,0" VerticalAlignment="Top"/>
+        <Label Content="kinect F" Grid.Column="1" HorizontalAlignment="Left" Margin="269,596,0,0" VerticalAlignment="Top"/>
+        <Label Content="kinect F" Grid.Column="1" HorizontalAlignment="Left" Margin="269,596,0,0" VerticalAlignment="Top"/>
+        <Label Content="kinect B" Grid.Column="1" HorizontalAlignment="Left" Margin="318,596,0,0" VerticalAlignment="Top"/>
+        <Ellipse x:Name="remoteLED" HorizontalAlignment="Left" Height="26" Margin="59,538,0,0" VerticalAlignment="Top" Width="26" Grid.Column="1">
+            <Ellipse.Fill>
+                <SolidColorBrush Color="{DynamicResource {x:Static SystemColors.ScrollBarColorKey}}"/>
+            </Ellipse.Fill>
+        </Ellipse>
+        <Label Content="Remote" Grid.Column="1" HorizontalAlignment="Left" Margin="47,507,0,0" VerticalAlignment="Top"/>
 
     </Grid>
 </Window>
