--- a/MainController/MainWindow.xaml
+++ b/MainController/MainWindow.xaml
@@ -78,15 +78,8 @@
         <TextBox x:Name="portInput" HorizontalAlignment="Left" Height="23" Margin="133,255,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="120"/>
         <Label Content="OSC Port" HorizontalAlignment="Left" Margin="56,252,0,0" VerticalAlignment="Top" Width="64" Height="26"/>
         <Button x:Name="comms_connect" Content="Connect" HorizontalAlignment="Left" Margin="263,449,0,0" VerticalAlignment="Top" Width="75" Click="comms_connect_Click"/>
-        <RichTextBox x:Name="commData" HorizontalAlignment="Left" Height="147" Margin="28,514,0,0" VerticalAlignment="Top" Width="310" VerticalScrollBarVisibility="Auto">
-            <FlowDocument>
-                <Paragraph>
-                    <Run Text="RichTextBox"/>
-                </Paragraph>
-            </FlowDocument>
-        </RichTextBox>
-        <Rectangle x:Name="frontStatus" Fill="#FFF4F4F5" HorizontalAlignment="Left" Height="100" Margin="38,225,0,0" VerticalAlignment="Top" Width="215" Grid.Column="1"/>
-        <Rectangle x:Name="backStatus" Fill="#FFF4F4F5" HorizontalAlignment="Left" Height="100" Margin="269,225,0,0" VerticalAlignment="Top" Width="215" Grid.Column="1"/>
+        <Rectangle x:Name="frontStatus" Fill="#FFF4F4F5" HorizontalAlignment="Left" Height="100" Margin="480,225,0,0" VerticalAlignment="Top" Width="214" Grid.ColumnSpan="2"/>
+        <Rectangle x:Name="backStatus" Fill="#FFF4F4F5" HorizontalAlignment="Left" Height="100" Margin="241,225,0,0" VerticalAlignment="Top" Width="215" Grid.Column="1"/>
         <Button x:Name="slideSceneButton" Grid.ColumnSpan="2" Content="Slide Scene" HorizontalAlignment="Left" Margin="455,75,0,0" VerticalAlignment="Top" Width="115" Height="30" Click="slideSceneButton_Click"/>
         <Button x:Name="exerciseSceneButton" Content="Exercise Scene" HorizontalAlignment="Left" Margin="180,75,0,0" VerticalAlignment="Top" Width="115" Height="30" Grid.Column="1" Click="exerciseSceneButton_Click"/>
         <Button x:Name="limboSceneButton" Content="Limbo Scene" HorizontalAlignment="Left" Margin="374,75,0,0" VerticalAlignment="Top" Width="115" Height="30" Grid.Column="1" Click="limboSceneButton_Click"/>
@@ -142,6 +135,7 @@
         <Label Content="Remote" Grid.Column="1" HorizontalAlignment="Left" Margin="351,605,0,0" VerticalAlignment="Top"/>
         <Button x:Name="limboResetButton" Content="Limbo Reset" HorizontalAlignment="Left" Margin="0,178,0,0" VerticalAlignment="Top" Width="75" Click="limboResetButton_Click" Grid.Column="1"/>
         <TextBlock x:Name="SceneDisplayBox" Grid.Column="1" HorizontalAlignment="Left" Margin="134,14,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="47" Width="214" Text="Scene Display" FontFamily="TradeGothic LT BdCondTwenty" FontSize="40"/>
+        <TextBox x:Name="CommsData" HorizontalAlignment="Left" Height="41" Margin="28,493,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="311"/>
 
 
     </Grid>
